--- a/test_cleanrl.00.ipynb
+++ b/test_cleanrl.00.ipynb
@@ -2,13 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'cleanrl' has no attribute 'ppo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgymnasium\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgym\u001b[39;00m\n\u001b[1;32m      5\u001b[0m env \u001b[38;5;241m=\u001b[39m gym\u001b[38;5;241m.\u001b[39mmake(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCartPole-v1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m \u001b[43mcleanrl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mppo\u001b[49m\u001b[38;5;241m.\u001b[39mtrain(env, model_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCartPole-v1\u001b[39m\u001b[38;5;124m\"\u001b[39m, total_timesteps\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10000\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'cleanrl' has no attribute 'ppo'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import cleanrl\n",
-    "import "
+    "import gymnasium as gym\n",
+    "\n",
+    "env = gym.make(\"CartPole-v1\")\n",
+    "\n",
+    "cleanrl.ppo.train(env, model_name=\"CartPole-v1\", total_timesteps=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'cleanrl.ppo' from '/home/michael/Synology/Desktop/Data/Python/MuJoCo/mujoco_stability/cleanrl/cleanrl/ppo.py'>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from cleanrl import ppo\n",
+    "\n",
+    "ppo."
    ]
   }
  ],
